; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_brotli_bit_stream.c_StoreVarLenUint8.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_brotli_bit_stream.c_StoreVarLenUint8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64*, i32*)* @StoreVarLenUint8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @StoreVarLenUint8(i64 %0, i64* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i64*, i64** %5, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @BrotliWriteBits(i64 1, i64 0, i64* %11, i32* %12)
  br label %32

14:                                               ; preds = %3
  %15 = load i64, i64* %4, align 8
  %16 = call i64 @Log2FloorNonZero(i64 %15)
  store i64 %16, i64* %7, align 8
  %17 = load i64*, i64** %5, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @BrotliWriteBits(i64 1, i64 1, i64* %17, i32* %18)
  %20 = load i64, i64* %7, align 8
  %21 = load i64*, i64** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @BrotliWriteBits(i64 3, i64 %20, i64* %21, i32* %22)
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* %4, align 8
  %26 = load i64, i64* %7, align 8
  %27 = shl i64 1, %26
  %28 = sub i64 %25, %27
  %29 = load i64*, i64** %5, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @BrotliWriteBits(i64 %24, i64 %28, i64* %29, i32* %30)
  br label %32

32:                                               ; preds = %14, %10
  ret void
}

declare dso_local i32 @BrotliWriteBits(i64, i64, i64*, i32*) #1

declare dso_local i64 @Log2FloorNonZero(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
